# Calendar-and-To-Do-list-CalDav

./: README.md
calDAVClient/: CMakeLists.txt  main.cpp
calDAVClient/Headers/: API.h  Date.h  Vcalendar.h  Vtodo.h  createevent.h  createevent.ui  createtodo.h  createtodo.ui  ipaddressform.h  ipaddressform.ui  loginwindow.h  mainwindow.h  todo_information.h  todo_information.ui  updatetodo.h  updatetodo.ui
calDAVClient/Sources/: API.cpp  Date.cpp  IcsParser.cpp  Vcalendar.cpp  Vtodo.cpp  createcalendarform.cpp  createevent.cpp  createtodo.cpp  event_information.cpp  ipaddressform.cpp  loginwindow.cpp  mainwindow.cpp  sharecalendarform.cpp  todo_information.cpp  updatetodo.cpp
calDAVClient/curl-7.78.0-win64-mingw/docs/: FAQ.txt  URL-SYNTAX.md
qtcreatorTest/: CMakeLists.txt  main.cpp
qtcreatorTest/Headers/: API.h  Date.h  IcsParser.h  Vcalendar.h  Vevent.h  Vtodo.h  createcalendarform.h  createcalendarform.ui  createevent.h  createevent.ui  createtodo.h  createtodo.ui  event_information.h  event_information.ui  loginwindow.h  loginwindow.ui  mainwindow.h  mainwindow.ui  sharecalendarform.h  sharecalendarform.ui  todo_information.h  todo_information.ui  updatetodo.h  updatetodo.ui
qtcreatorTest/Sources/: API.cpp  Date.cpp  IcsParser.cpp  Vcalendar.cpp  Vevent.cpp  Vtodo.cpp  createcalendarform.cpp  createevent.cpp  createtodo.cpp  event_information.cpp  loginwindow.cpp  mainwindow.cpp  sharecalendarform.cpp  todo_information.cpp  updatetodo.cpp
qtcreatorTest/curl-7.78.0-win64-mingw/docs/: FEATURES.md  TODO.txt  TheArtOfHttpScripting.md
slides/: presentazione.pptx
